<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.marsplay.assignment.module.activity.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        tools:context="com.marsplay.assignment.module.activity.MainActivity">

        <ImageView
            android:id="@+id/showImageView"
            android:layout_width="fill_parent"
            android:layout_height="150dp"
            tools:visibility="visible"
            android:visibility="gone"
            android:layout_marginTop="20dp"
            tools:ignore="ContentDescription" />

        <Button
            android:id="@+id/btChooseImage"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/showImageView"
            android:layout_marginTop="20dp"
            android:text="@string/choose_image" />

        <EditText
            android:id="@+id/imageNameEditText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btChooseImage"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:hint="@string/enter_image_name_here_optional"
            android:importantForAutofill="no"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/btUploadImage"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageNameEditText"
            android:layout_marginTop="20dp"
            android:text="@string/upload_image_to_firebase_storage" />

        <Button
            android:id="@+id/btDisplayImages"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btUploadImage"
            android:layout_marginTop="10dp"
            android:text="@string/show_all_uploaded_images" />

    </RelativeLayout>
</ScrollView>