<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cutout_safe_area"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:showIn="@layout/fragment_gallery">

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="@dimen/round_button_small"
        android:layout_height="@dimen/round_button_small"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="@dimen/margin_small"
        android:background="@android:color/transparent"
        android:contentDescription="@string/back_button_alt"
        android:scaleType="fitCenter"
        android:tint="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back" />

    <ImageButton
        android:id="@+id/delete_button"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/round_button_small"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/delete_button_alt"
        android:scaleType="fitCenter"
        android:tint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_delete" />

    <ImageButton
        android:id="@+id/share_button"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/round_button_small"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="32dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/share_button_alt"
        android:scaleType="fitCenter"
        android:tint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_share" />

</androidx.constraintlayout.widget.ConstraintLayout>